Mendukung teks di baris baru

--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
 <body>
   <div class="container text-center judul">
     <h1><img src="img/img.png" alt="Whatsapp"> Direct-WA</h1>
-    <h3><span>Send Whatsapp</span> Message without saving the number, by <span class="target"></span></h3>
+    <h3><span>Send Whatsapp</span> Message without saving the number<span class="target"></span></h3>
   </div>
 
   <section class="container text-center input">
     <input type="text" value="62" id="nomor" placeholder="Contoh: 62123456789"><br>
-    <textarea id="teks" cols="100" rows="10"
-      placeholder="Write the message you want to send... &#10;Catatan JANGAN PAKAI ENTER ATAU BARIS BARU!!"></textarea><br>
+    <textarea id="teks" cols="100" rows="10" placeholder="Write the message you want to send..."></textarea><br>
     <form type="button" target="_blank" class="btn btn-primary">Dapatkan Link</form>
   </section>
 
