--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 
   <section class="container text-center input">
     <input type="text" value="62" id="nomor" placeholder="Contoh: 62123456789"><br>
-    <textarea id="teks" cols="100" rows="10" placeholder="Write the message you want to send..."></textarea><br>
+    <textarea id="teks" cols="50" rows="10" placeholder="Write the message you want to send..."></textarea><br>
     <form type="button" target="_blank" class="btn btn-primary">Dapatkan Link</form>
   </section>
 
-
+  <!-- Autentikasi Nomor HP -->
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
