--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <div class="container text-center judul">
     <h1><img src="img/img.png" alt="Whatsapp"> Direct-WA</h1>
-    <h3><span>Send Whatsapp</span> Message without saving the number<span class="target"></span></h3>
+    <h3><span>Send Whatsapp</span> Message without saving the number <br>by <span class="target"></span></h3>
   </div>
 
   <section class="container text-center input">
