--- a/index.html
+++ b/index.html
@@ -1,44 +1,72 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+      crossorigin="anonymous"
+    />
+    <title>Direct-WA</title>
+    <link rel="stylesheet" href="scss/main.css" />
+  </head>
 
-<head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-  <title>Direct-WA</title>
-  <link rel="stylesheet" href="scss/main.css">
-</head>
+  <body>
+    <div class="container text-center judul">
+      <h1><img src="img/img.png" alt="Whatsapp" /> Direct-WA</h1>
+      <h3>
+        <span>The easiest way</span> to send whatsapp messages without having to
+        save the destination number
+      </h3>
+    </div>
 
-<body>
-  <div class="container text-center judul">
-    <h1><img src="img/img.png" alt="Whatsapp"> Direct-WA</h1>
-    <h3><span>Send Whatsapp</span> Message without saving the number <br>by <span class="target"></span></h3>
-  </div>
+    <section class="container text-center input mb-5">
+      <input
+        type="text"
+        value="62"
+        id="nomor"
+        placeholder="Contoh: 62123456789"
+        required
+      /><br />
+      <textarea
+        id="teks"
+        cols="50"
+        rows="10"
+        placeholder="Write the message you want to send..."
+      ></textarea
+      ><br />
+      <button type="button" target="_blank" class="btn btn-primary">
+        Dapatkan Link
+      </button>
+    </section>
 
-  <section class="container text-center input">
-    <input type="text" value="62" id="nomor" placeholder="Contoh: 62123456789"><br>
-    <textarea id="teks" cols="50" rows="10" placeholder="Write the message you want to send..."></textarea><br>
-    <form type="button" target="_blank" class="btn btn-primary">Dapatkan Link</form>
-  </section>
+    <!-- Autentikasi Nomor HP -->
 
-  <!-- Autentikasi Nomor HP -->
-
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-    crossorigin="anonymous"></script>
-  <script src="typed.js-master/lib/typed.js"></script>
-  <script src="js/index.js"></script>
-</body>
-
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+      crossorigin="anonymous"
+    ></script>
+    <script src="typed.js-master/lib/typed.js"></script>
+    <script src="js/index.js"></script>
+  </body>
 </html>
